--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Bellota Text", cursive;
 }
+
 body {
-  display: flex;
+  text-align: center;
   justify-content: center;
   min-height: 100vh;
   width: 100%;
   background: #f2f3f7;
 }
+
+.title {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 
 .container {
   display: flex;
@@ -20,20 +30,6 @@ body {
   flex-wrap: wrap;
 }
 
-.title {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.title h7 {
-  font-weight: bolder;
-  font-size: 2rem;
-}
-.title h8 {
-  font-weight: bold;
-  font-size: 1.7rem;
-}
 
 .container .card {
   width: 330px;
@@ -44,12 +40,14 @@ body {
   box-shadow: 0.6em 0.6em 1.2em #d2dce9, -0.5em -0.5em 1em #ffffff;
   border-radius: 20px;
 }
+
 .container .card .content {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
 .container .card .content .imgBx {
   width: 180px;
   height: 180px;
@@ -58,6 +56,7 @@ body {
   margin-bottom: 20px;
   overflow: hidden;
 }
+
 .container .card .content .imgBx img {
   position: absolute;
   top: 0;
@@ -66,32 +65,42 @@ body {
   height: 100%;
   object-fit: cover;
 }
-.container .card .content .contentBx h4 {
+
+.container .card .content .contentBx h3 {
   color: #36187d;
   font-size: 1.7rem;
   font-weight: bold;
   text-align: center;
   letter-spacing: 1px;
 }
-.container .card .content .contentBx h5 {
+
+.container .card .content .contentBx h4 {
   color: #6c758f;
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
 }
+
 .container .card .content .sci {
   margin-top: 20px;
+
 }
+
 .container .card .content .sci a {
   text-decoration: none;
+  font-family: "Bellota Text", cursive;
   color: #6c758f;
-  font-size: 30px;
-  margin: 10px;
+  font-size: 1.2rem;
+
   transition: color 0.4s;
 }
+
 .container .card .content .sci a:hover {
   color: #0196e3;
 }
+
+
+
 /*   colors
         #f2f3f7
         #d2dce9
