--- a/style.css
+++ b/style.css
@@ -8,11 +8,30 @@
 }
 
 body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 50s ease infinite;
+  height: 100vh;
+
   text-align: center;
   justify-content: center;
   min-height: 100vh;
   width: 100%;
-  background: #f2f3f7;
+
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .title {
@@ -20,6 +39,7 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  color: white;
 }
 
 
@@ -38,9 +58,10 @@ body {
   padding: 60px 30px;
   margin: 20px;
   background: #f2f3f7;
-  box-shadow: 0.6em 0.6em 1.2em #d2dce9, -0.5em -0.5em 1em #ffffff;
+  box-shadow: 0.15em 0.15em 0.3em #d2dce9, -0.13em -0.13em 0.25em #ffffff;
   border-radius: 20px;
 }
+
 
 .container .card .content {
   display: flex;
@@ -130,6 +151,7 @@ body {
 
 .description {
   margin: 1rem 3rem;
+  color: white;
 }
 
 .description p {
