--- a/style.css
+++ b/style.css
@@ -136,6 +136,13 @@ body {
   margin-top: 2rem;
 }
 
+/* Joana */
+.column {
+  float: left;
+  width: 50%;
+}
+
+
 /*   colors
         #f2f3f7
         #d2dce9
